Validacione icono de usuario

--- a/SqlitePrueba.Android/SqlitePrueba.Android.csproj
+++ b/SqlitePrueba.Android/SqlitePrueba.Android.csproj
@@ -90,7 +90,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable\User.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SqlitePrueba\SqlitePrueba.csproj">
